--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="content/css/loading.css" />
   </head>
   <body>
-    <!--[if lt IE 9]>
-      <p class="browserupgrade">
-        You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve
-        your experience.
-      </p>
-    <![endif]-->
-    <jhi-main>
+
+    <jhi-main class="how" style="
+      min-height: 100%;
+      height: 100%;
+      flex-direction: column;
+      display: flex;
+      flex-wrap: wrap;">
       <div class="app-loading">
         <div class="lds-pacman">
           <div>
@@ -35,29 +35,5 @@
         </div>
       </div>
     </jhi-main>
-    <noscript>
-      <h1>You must enable JavaScript to view this page.</h1>
-    </noscript>
-    <script type="text/javascript">
-      // show an error message if the app loading takes more than 4 sec
-      window.onload = function () {
-        setTimeout(showError, 4000);
-      };
-      function showError() {
-        var errorElm = document.getElementById('jhipster-error');
-        if (errorElm && errorElm.style) {
-          errorElm.style.display = 'block';
-        }
-      }
-    </script>
-    <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>-->
   </body>
 </html>
