--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,10 +11,12 @@
     <link rel="icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webapp" />
     <link rel="stylesheet" href="content/css/loading.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   </head>
   <body>
 
-    <jhi-main class="how" style="
+    <main class="how" style="
       min-height: 100%;
       height: 100%;
       flex-direction: column;
@@ -34,6 +36,6 @@
           </div>
         </div>
       </div>
-    </jhi-main>
+    </main>
   </body>
 </html>
